# bevy_atmosphere

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.MD  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: dependencies.yml  main.yml
assets/: logo.blend  logo.blend1  skybox.blend  skybox.blend1
bevy_atmosphere_macros/: Cargo.toml
bevy_atmosphere_macros/src/: lib.rs  model.rs
docs/: README.md
examples/: README.md  atmosphere.rs  basic.rs  cycle.rs  detection.rs  gradient.rs  models.rs  nishita.rs  settings.rs  splitscreen.rs  substantive.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs  model.rs
src/: lib.rs  material.rs  mesh.rs  model.rs  pipeline.rs  plugin.rs  resource.rs  settings.rs  skybox.rs  spectator.rs  system_param.rs
src/collection/: applesky.rs  gradient.rs  mod.rs  nishita.rs  nishita_precompute.rs
src/model/: gradient.rs  mod.rs  nishita.rs
src/models/: gradient.rs  mod.rs  nishita.rs
src/shaders/: applesky.wgsl  gradient.wgsl  main.wgsl  math.wgsl  nishita.wgsl  nishita_precompute.wgsl  sky.frag  sky.vert  skybox.wgsl  types.wgsl  utils.wgsl
